# Vigil-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
action/: action.yml
docs/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: agents.md  assertions.md  ci.md  cost-tracking.md  llm-judge.md  plugins.md  snapshots.md
examples/basic/: test_hello.py
examples/multi_step/: test_workflow.py
examples/openai_agent/: test_chatbot.py
src/vigil/: __init__.py  cli.py  cost.py
src/vigil/agents/: __init__.py  base.py  cli.py  function.py  http.py
src/vigil/assertions/: __init__.py  content.py  cost.py  judge.py  latency.py  quality.py  semantic.py
src/vigil/core/: __init__.py  config.py  decorators.py  results.py  runner.py
src/vigil/plugins/: __init__.py  pytest_plugin.py  registry.py
src/vigil/reporting/: __init__.py  html.py  terminal.py
src/vigil/snapshots/: __init__.py  manager.py
tests/: test_agents.py  test_assertions.py  test_async.py  test_config.py  test_cost.py  test_init_command.py  test_plugins.py  test_runner.py  test_snapshots.py
